Version 1.0RC4-CVS (?? ??? 2005)
  - Added new default webcal_config values to all sql table definition files
  - Fixed bug 1167790: class="selectedday" assignments in other than day.php
  - Changed edit_entry_handler to remove requirement for Admins to approve
    Public events that they create.
  - Applied bug fix 1151442: Overlapping events display error in week.php
  - Removed most instances of htnlentities as unneeded
  - Fixed bug 1162486: Path exposure issue with view_entry.php
  - Fixed problem, if non-user calendars are diabled, the most recent change
    to add Public Access to the 'Manage Calendar of:' list throws a Warning.
  - Updated Finnish translation
  - Added option to set LDAP_OPT_PROTOCOL_VERSION in user-ldap.php
Version 1.0RC3 (11 Mar 2005)
 - Added 'Public Access' to Manage Calendar of: list, if Admin. 
 - Removed ODBC host:database option from php-dbi.php. If needed, host can be 
   added to DSN in settings.php.
 - Changed charset in Czech.txt from utf8 to UTF-8
 - Fixed problem with upcoming.php header. xml:lang and lang were set to full 
   LANGUAGE value, not abbreviation.
 - login.php: Added xml encoding back in, it's now dynamic like other pages.
 - upcoming.php: Fixed problem with "You are not Authorized" error message 
   being sent without a header.
 - Patch 1158090: convert comments for use with phpDocumentor
 - Updated German translation
 - Fixed bug 1156729:Global-view with no valid user creates a non-translatable message
 - Fixed problem with popups.php with long text strings going off screen.
   Maximum width is now configurable.
 - Fixed issue with Application Name containing ? characters in logon.php.
   If Application Name = "Title" then translate, else use Admin defined 
   name and run through htmlspecialchars. Also removed forms[0] references
 - Fixed bug 1152863: Japanese strings munged by reports.php and upcoming.php
 - Fixed bug 1124461: Apostrophe in Text Aborts Translation